Fix error, when advertisement component is on mobile view

--- a/DentalWebsiteProject/DentalWebsite/src/app/about/about.component.css
+++ b/DentalWebsiteProject/DentalWebsite/src/app/about/about.component.css
@@ -24,7 +24,7 @@ h1 span {
 }
 
 .container img {
-    width: 39%;
+    max-width: 400px;
     padding: 0px;
 }
 
